--- a/templates/pronouns/base.html
+++ b/templates/pronouns/base.html
@@ -2,6 +2,8 @@
 <html>
   <head>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>PIPR Experiment</title>
 
     <script src="/static/pronouns/jspsych-6.1.0/jspsych.js"></script>
