--- a/templates/pronouns/base.html
+++ b/templates/pronouns/base.html
@@ -35,7 +35,7 @@
 
   <header class='top-bar'>
     <h1 id='top-bar-title'>
-      Sentence Comprehension Task
+      Comprehension Task
     </h1>
 
     <div id='progress-container' class='hide'>
