--- a/templates/pronouns/demographics.html
+++ b/templates/pronouns/demographics.html
@@ -1,9 +1,9 @@
 
 <template id="demographics">
 
-    <div class='instructions-container'>
+    <div>
 
-        <h3 class='title'>Demographics</h3>
+        <h2 class='title'>Demographics</h3>
 
         <div class='question'>
 
