usability changes (goBack warning, consent zoom, scrollTop)

--- a/static/pronouns/pronouns_v1.css
+++ b/static/pronouns/pronouns_v1.css
@@ -425,6 +425,13 @@ p.question {
     padding-bottom: 10px;
 }
 
+/* Consent */
+
+#consent-container {
+    max-width:100%;
+    overflow-x:scroll;
+}
+
 /* MTurk Code */
 
 .code-container {
