post-pilot changes (catch, debrief, handedness)

--- a/templates/pronouns/demographics.html
+++ b/templates/pronouns/demographics.html
@@ -52,6 +52,44 @@
 
         </div>
 
+        <div class='question'>
+
+            <h3 class='question-title'>Which is your dominant hand?</h3>
+
+            
+            <div class='radio-option'>
+                <input type='radio' name='demographics_handedness' id='handedness_1'
+                value="Right"/>
+                <label for='handedness_1'>1) Right</label>
+            </div>
+
+
+            
+            <div class='radio-option'>
+                <input type='radio' name='demographics_handedness' id='handedness_2'
+                value="Left"/>
+                <label for='handedness_2'>2) Left</label>
+            </div>
+
+
+            
+            <div class='radio-option'>
+                <input type='radio' name='demographics_handedness' id='handedness_3'
+                value="Both"/>
+                <label for='handedness_3'>3) Both</label>
+            </div>
+
+
+            
+            <div class='radio-option'>
+                <input type='radio' name='demographics_handedness' id='handedness_4'
+                value="Other"/>
+                <label for='handedness_4'>4) Prefer not to say</label>
+            </div>
+
+
+        </div>
+
 
         <div class='question'>
 
