use lists for stimuli selection

--- a/templates/pipr3/demographics.html
+++ b/templates/pipr3/demographics.html
@@ -91,10 +91,10 @@
         </div>
 
         <div class='question'>
-
+s
             <h3 class='question-title'>Have you ever been diagnosed with any of the following conditions?</h3>
 
-            <p class='question-subtitle'>Dyslexia, austism spectrum disorder, attention deficit hyperactivity disorder</p>
+            <p class='question-subtitle'>Dyslexia, autism spectrum disorder, attention deficit hyperactivity disorder</p>
 
             
             <div class='radio-option'>
