split post-test by condition

--- a/templates/pipr3/demographics.html
+++ b/templates/pipr3/demographics.html
@@ -116,7 +116,7 @@
 
         <div class='question'>
 
-            <h3 class='question-title'>Do you have normal or corrected-to-normal vision?</h3>
+            <h3 class='question-title'>Do you see normally (either with or without corrective lenses?)</h3>
 
             
             <div class='radio-option'>
