--- a/static/pipr3/pronouns_v1.css
+++ b/static/pipr3/pronouns_v1.css
@@ -168,6 +168,7 @@ button#submit:hover, .btn:hover {
 
 form#jspsych-survey-html-form {
     min-height: calc(90vh - 50px);
+    padding-bottom: 20px;
 }
 
 div.question {
@@ -288,7 +289,7 @@ textarea {
 }
 
 div#expt-container {
-    height: calc(100vh - 50px);
+    /*height: calc(100vh - 50px);*/
     /*max-height: 800px;*/
     min-height: 600px;
     font-size:1.4em;
@@ -300,6 +301,16 @@ div#expt-container {
   div#expt-container {
     font-size: 1em;
   }
+}
+
+div#SprCanvas-container {
+    height: calc(100vh - 50px);
+    min-height: 600px;
+    display: flex;
+}
+
+canvas#SprCanvas {
+    margin: auto;
 }
 
 
@@ -324,6 +335,10 @@ span.key-demo {
 
 p.instructions {
     text-align: justify;
+}
+
+p.instructions-c {
+    text-align: center;
 }
 
 #continue {
