--- a/templates/pipr3/expt.html
+++ b/templates/pipr3/expt.html
@@ -20,6 +20,10 @@
 <!-- HTML Templates -->
 {% include 'pipr3/demographics.html' %}
 
+{% include 'pipr3/osivq.html' %}
+
+{% include 'pipr3/vviq.html' %}
+
 <!-- Local JS -->
 <script src="/static/pipr3/globals.js"></script>
 <script src="/static/pipr3/stimuli.js"></script>
